--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 CHANGES
 *******
 
+1.0b3-1 (unreleased)
+====================
+
+- Nothing changed yet.
+
+
 1.0b3 (2012-12-17)
 ==================
 
