--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,8 +1,8 @@
 CHANGES
 *******
 
-1.0b3-1 (unreleased)
-====================
+1.0b3-2-gocept (2013-03-22)
+===========================
 
 - Made obviel-template.js compatible with IE 8.
 
