Back to development: 1.0b3-4-IE8-gocept

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 CHANGES
 *******
 
+1.0b3-4-IE8-gocept (unreleased)
+===============================
+
+- Nothing changed yet.
+
+
 1.0b3-3-IE8-gocept (2013-06-11)
 ===============================
 
